# ocobs

./: LICENSE  README.md  ocobs.opam
.circleci/: config.yml
src/: dune  naive.ml  ocobs.ml  ocobs.mli  seqs.ml  shared.ml
test/: dune  tests.ml
